--- a/app/design/frontend/CourseDesign/Training/Magento_Cms/templates/html/banner.phtml
+++ b/app/design/frontend/CourseDesign/Training/Magento_Cms/templates/html/banner.phtml
@@ -29,19 +29,18 @@
       <!-- Right: Content -->
       <div class="banner-content">
         <h1 class="banner-title">
-          Transform Your Business with Smart Solutions
+        Learn Real Skills. Build Real Projects. Get Real Opportunities.
         </h1>
         <p class="banner-description">
-          Get complete management solutions for
-          <strong>Milk Shops, Sanitary Stores, Inventory, Sales Reports</strong
-          >, and much more.
+        Join our practical tech bootcamp tailored to the IT industry's real demands.
+        Sharpen your skills, get actual industrial experience, and unlock referral opportunities and have the chance to earn partial ownership or long-term involvement.
         </p>
         <div class="banner-buttons">
-          <a href="/contact" class="banner-btn banner-btn-green floating-element"
-            >Get a Free Demo</a
+          <a href="/tasks/outline/courses" class="banner-btn banner-btn-green floating-element"
+            >Course Outline/Guidemap</a
           >
-          <a href="/products" class="banner-btn banner-btn-outline floating-element"
-            >Explore Products</a
+          <a href="/main-courses.html" class="banner-btn banner-btn-outline floating-element"
+            >Explore Courses</a
           >
         </div>
       </div>
