--- a/app/design/frontend/CourseDesign/Training/Magento_Cms/web/css/source/_module.less
+++ b/app/design/frontend/CourseDesign/Training/Magento_Cms/web/css/source/_module.less
@@ -15,7 +15,7 @@
     align-items: center;
     background: linear-gradient(to right, #5c709b, #1a2029);
     box-shadow: 0px 4px 15px #00000066;
-    height: 500px;
+    height: 450px;
 }
 
 /* 🔥 Dim Light Overlay */
@@ -133,7 +133,7 @@
 /* 📱 Responsive Design */
 @media (max-width: 850px) {
     .fancy-banner{
-        height: 530px;
+        height: 430px;
     }
     .banner-container {
         flex-direction: column;
@@ -319,12 +319,12 @@
       }
   
       h3 {
-        font-size: 1.5rem;
+        font-size: 18px;
         margin-bottom: 10px;
       }
   
       p {
-        font-size: 1rem;
+        font-size: 13px;
         color: #ccc;
       }
     }
@@ -364,13 +364,13 @@
     }
   
     .highlight-text {
-      font-size: 1.1rem;
+      font-size: 14px;
       color: #00d1b2;
       margin-bottom: 20px;
     }
   
     .description {
-      font-size: 1rem;
+      font-size: 13px;
       color: #cccccc;
       line-height: 1.7;
       margin-bottom: 30px;
@@ -415,6 +415,43 @@
     }
   }
   
+//////////////////////////contact us support
+.contact-support-section {
+  background-color: #0a2540; /* dark blue */
+  color: #ffffff;
+  padding: 40px 20px;
+  text-align: center;
+  margin-top: 40px;
+}
+
+.contact-support-content h3 {
+  font-size: 21px;
+  margin-bottom: 10px;
+}
+
+.contact-support-content p {
+  font-size: 13px;
+  margin-bottom: 20px;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.contact-button {
+  background-color: #ffffff;
+  color: #0a2540;
+  padding: 10px 20px;
+  border-radius: 8px;
+  text-decoration: none;
+  font-weight: 600;
+  transition: background 0.3s;
+}
+
+.contact-button:hover {
+  background-color: #e0e0e0;
+}
+
+
 //////////////////////subscription
 .subscription-plan-section {
   background: #f9f9f9;
