--- a/app/design/frontend/CourseDesign/Training/web/css/source/_extend.less
+++ b/app/design/frontend/CourseDesign/Training/web/css/source/_extend.less
@@ -5,42 +5,55 @@
 //////////////////////////////////////////////////////
 // ACTUAL NAVIGATION BAR
 //////////////////////////////////////////////////////
-.nav-sections {margin-bottom: 0 !important;}
-.navigation {
-    background: #14142a !important; 
-
-    ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;   // center items horizontally
-    }
-
-    a {
-        display: block;
-        padding: 10px 0;           // vertical hit-area for links
-        font-size: 14px;
-        font-weight: 600;
-        text-decoration: none;     // remove underline
-        transition: transform 0.3s ease;
-
-        &:hover {
-            transform: scale(1.1);  // zoom-in effect on hover
-        }
-    }
-    .ui-menu-item{
-        .level-top.ui-menu-item-wrapper{
-            line-height: 42px;
-        }
+// for all
+.nav-toggle {
+    top:unset;
+}
+.nav-toggle:before{
+    color: white;
+}
+.nav-open{
+    .nav-toggle:after{
+        background: unset !important;
     }
 }
-@media screen and (min-width: 768px) {
+// for desktop
+@media only screen and (min-width: 768px) {
+    .nav-sections {
+        margin-bottom: 0 !important;
+    }
     .navigation {
-      // target the li and the <a> inside that are getting overridden
-      li.level0 > .level-top,
-      li.level0 > .level-top > a {
-        color: #ffffff !important;
-      }
+        background: #14142a !important; 
+
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;   // center items horizontally
+        }
+
+        a {
+            display: block;
+            padding: 10px 0;           // vertical hit-area for links
+            font-size: 14px;
+            font-weight: 600;
+            text-decoration: none;     // remove underline
+            transition: transform 0.3s ease;
+
+            &:hover {
+                transform: scale(1.1);  // zoom-in effect on hover
+            }
+        }
+        .ui-menu-item{
+            .level-top.ui-menu-item-wrapper{
+                line-height: 42px;
+            }
+        }
+        // target the li and the <a> inside that are getting overridden
+        li.level0 > .level-top,
+        li.level0 > .level-top > a {
+            color: #ffffff !important;
+        }
     }
 }
