--- a/app/design/frontend/CourseDesign/Training/Magento_Catalog/web/css/source/_extend.less
+++ b/app/design/frontend/CourseDesign/Training/Magento_Catalog/web/css/source/_extend.less
@@ -1,3 +1,9 @@
+////category filter 
+.block.filter {
+    display: none;
+}
+////category filter 
+
 .product.details.product-item-details {
     text-align: center; 
 }
