--- a/app/design/frontend/CourseDesign/Training/Magento_Theme/templates/html/header.phtml
+++ b/app/design/frontend/CourseDesign/Training/Magento_Theme/templates/html/header.phtml
@@ -11,14 +11,16 @@
 $welcomeMessage = $block->getWelcome();
 ?>
 <?php if ($block->getShowPart() == 'welcome'): ?>
-    <li class="greet welcome" data-bind="scope: 'customer'">
-        <!-- ko if: customer().fullname  -->
-        <span class="logged-in"
-              data-bind="text: new String('<?= $escaper->escapeHtml(__('Welcome, %1!', '%1')) ?>').
-              replace('%1', customer().firstname)">
-        </span>
+    <!-- ko scope: 'customer' -->
+        <!-- ko if: customer().fullname -->
+        <li class="greet welcome" data-bind="scope: 'customer'">   
+            <span class="logged-in"
+                data-bind="text: new String('<?= $escaper->escapeHtml(__('Welcome, %1!', '%1')) ?>').
+                replace('%1', customer().firstname)">
+            </span>
+        </li>
         <!-- /ko -->
-    </li>
+    <!-- /ko -->
     <?php // phpcs:ignore Magento2.Legacy.PhtmlTemplate ?>
     <script type="text/x-magento-init">
         {
