--- a/app/design/frontend/CourseDesign/Training/web/css/source/_theme.less
+++ b/app/design/frontend/CourseDesign/Training/web/css/source/_theme.less
@@ -57,7 +57,7 @@
     }
 }
 
-.navigation, .breadcrumbs, .page-header .header.panel, .header.content, .footer.content, .page-wrapper > .widget, .page-wrapper > .page-bottom, .block.category.event, .top-container, .page-main { max-width: 100%};
+.navigation, .breadcrumbs, .page-header .header.panel, .header.content, .footer.content, .page-wrapper > .widget, .page-wrapper > .page-bottom, .block.category.event, .top-container, .page-main { max-width: 100% !important};
 // HEADER PANEL STYLING
 
 .page-header .panel.wrapper {
@@ -65,9 +65,10 @@
 }
 
 .panel.header{
-    background: #1d2124;
+    background: #282d32;
     display: flex;
     align-items: center;
+    // max-width: 100% !important;
     .header.links{
         float: none !important;
         margin-right: auto !important;
@@ -90,7 +91,7 @@
         }
     }
     .logo{
-        margin: 0 0 10px 10px;
+        margin: 0 0 5px 5px;
     }
     .block-search {
         display: inline-block;
@@ -100,6 +101,9 @@
         }
         .control{
             padding: 0 0 0 0;
+            border-top: unset;
+            clear: unset;
+            margin: unset;
             .nested{
                 a{
                     color: white;
@@ -137,14 +141,7 @@
 }
 
 .block.newsletter {
-    margin-bottom: 30px;
-}
-
-.block.newsletter .title {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 15px;
-    color: #fff;
+    margin-top: 20px;
 }
 
 .block.newsletter .content {
@@ -155,8 +152,15 @@
 
 .subscribe .field.newsletter {
     margin-bottom: 15px;
+    margin-right: 15px;
+    padding-left: 30px;
+    position: relative;
+
 }
 
+.block.newsletter .field .control:before {
+    left: -3px;
+}
 .subscribe .field.newsletter .control label {
     color: #fff;
     font-size: 14px;
@@ -191,6 +195,9 @@
 
 .footer-links {
     margin-top: 30px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .footer-links-title {
@@ -198,6 +205,7 @@
     font-weight: bold;
     color: #fff;
     margin-bottom: 15px;
+    margin-right: 15px;
     text-transform: uppercase;
     letter-spacing: 1px;
 }
@@ -214,7 +222,7 @@
     text-decoration: none;
     opacity: 0.7;
     display: inline-block;
-    padding: 6px 0;
+    padding: 2px 0;
     transition: opacity 0.3s ease;
 }
 
@@ -227,11 +235,17 @@
 }
 
 .copyright {
-    font-size: 13px;
+    font-size: 15px;
     opacity: 0.3;
     text-align: center;
     padding-top: 24px;
     margin-bottom: 0;
+    .item-social {
+        font-size: x-large;
+        .fab {
+            color: white;
+        }
+    }
 }
 
 .bugs {
@@ -355,5 +369,52 @@ input[type="radio"] {
     color: #555;
 }
 
+@media (max-width: 768px) {
+    .footer-links-title {
+        margin-right: 5px;
+    }
+    .page-header {
+        border-bottom: unset;
+        margin-bottom: unset;
+    }
+    .panel.header {
+        justify-content: space-around;
+        .logo{
+            margin: 10px 10px 10px 40px;
+            max-width: 100px;
+            width: 100%;
+            margin-right: auto;
+        }
 
+        .minicart-wrapper {
+            order: 3;
+            margin-top: unset;
+        }
+    }
 
+    .block-search {
+        margin-top: unset !important;
+        input{
+            margin-top: 0px;
+            margin-bottom: 0px;
+            width: auto;
+            max-width: 190px;
+        }
+    }
+    .block-search .label:hover:before {
+        color: #8f8f8f;
+    }
+
+    .minicart-wrapper .action.showcart.active:hover:before {
+        color: #8f8f8f;
+    }
+
+    .minicart-wrapper .action.showcart:hover:before {
+        color: #8f8f8f;
+    }
+    .panel.header .block-search .field {
+        margin-bottom: 5px;
+        display: flex;
+        margin-top: 10px;
+    }
+}
